# smilescript

./: dune-project  smilescript.opam
_build/: log
examples/: class.sms  control_flow.sms  function.sms  logical.sms  loop.sms  scope.sms
grammar/: smilescript.gram
lib/: dune  error.ml  interpreter.ml  lexer.ml  parser.ml  resolver.ml  smc.ml
test/: dune
