(lang dune 3.20)

(name smilescript)

(generate_opam_files true)

(source
 (github Arcelyth/smilescript))

(license LICENSE)

(package
 (name smilescript)
 (synopsis "Smilescript interpreter")
 (description "Smilescript interpreter")
 (depends ocaml)
 (license "MIT")
 (tags
  ("ocaml" "opam" "interpreter")))

